--- a/css/summary/summary.css
+++ b/css/summary/summary.css
@@ -4,12 +4,22 @@
   overflow-y: auto;
   transition: all 300ms ease-in-out;
 }
-.summary-column {
+
+.summary-content {
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-direction: column;
+  margin: 32px 16px 32px 16px;
   transition: all 300ms ease-in-out;
 }
+.summary-column {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
 .summary-greeting {
   font-size: 36px;
   display: none;
@@ -29,7 +39,7 @@
   font-size: 64px;
 }
 
-.summary-content {
+.summary-overview {
   display: flex;
   justify-content: center;
   flex-direction: column;
@@ -37,11 +47,6 @@
   margin-block: 32px;
 }
 
-.summary-title {
-  height: 104px;
-  max-width: 223px;
-  gap: 8px;
-}
 .summary-title h1 {
   font-size: 54px;
   font-weight: bold;
@@ -51,10 +56,11 @@
   color: var(--mockup-color);
   text-wrap: nowrap;
 }
-.separator {
+.separator-mobile {
   width: 90px;
   height: 3px;
   margin-top: 16px;
+  border-radius: 10px;
   background-color: var(--mockup-highlight);
 }
 
@@ -145,22 +151,45 @@
   .summary-greeting {
     display: block;
   }
-  .summary-column {
-    flex-direction: column;
-    justify-content: start;
+  .summary-content {
+    margin: 80px 0 80px 16px;
+    align-items: start;
     gap: 16px;
+  }
+
+  .summary-title {
+    display: flex;
+    align-items: center;
+  }
+  .separator-desktop {
+    height: 59px;
+    margin-inline: 15px;
+    width: 3px;
+    border-radius: 10px;
+    background-color: var(--mockup-highlight);
+    transition: all 300ms ease-in-out;
+  }
+  .separator-mobile {
+    display: none;
+  }
+  .summary-column {
+    gap: 16px;
+  }
+}
+@media (min-width: 900px) {
+  .separator-desktop {
+    margin-inline: 30px;
   }
 }
 
 @media (min-width: 1000px) {
-  .summary-column {
-    flex-direction: row;
-    margin-inline: 32px;
+  .summary-content {
+    margin: 110px 0 16px 96px;
   }
 }
-
 @media (min-width: 1341px) {
   .summary-column {
-    margin-inline: 96px;
+    flex-direction: row;
+    align-items: center;
   }
 }
