--- a/css/summary/summary.css
+++ b/css/summary/summary.css
@@ -7,13 +7,14 @@
 
 .summary-content {
   display: flex;
-  align-items: center;
+  align-items: start;
   justify-content: center;
   flex-direction: column;
   margin: 32px 16px 32px 16px;
   transition: all 300ms ease-in-out;
 }
 .summary-column {
+  width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -41,20 +42,23 @@
 
 .summary-overview {
   display: flex;
-  justify-content: center;
   flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin-block: 40px;
   gap: 40px;
-  margin-block: 32px;
 }
 
 .summary-title h1 {
   font-size: 54px;
   font-weight: bold;
+  transition: all 300ms ease-in-out;
 }
 .summary-title span {
   font-size: 22px;
   color: var(--mockup-color);
   text-wrap: nowrap;
+  transition: all 300ms ease-in-out;
 }
 .separator-mobile {
   width: 90px;
@@ -62,60 +66,50 @@
   margin-top: 16px;
   border-radius: 10px;
   background-color: var(--mockup-highlight);
-}
-
-.summary-rows {
-  height: 384px;
-  max-width: 396px;
+  transition: all 300ms ease-in-out;
 }
 
 .summary-row {
   display: flex;
   justify-content: space-between;
-  flex-direction: row;
-  margin-bottom: 30px;
+  align-items: center;
+  gap: 24px;
 }
 
 .box-1 {
-  height: 110px;
-  width: 186px;
-  font-size: 14px;
   background-color: var(--white-color);
   border-radius: 20px;
   display: flex;
   justify-content: center;
   align-items: center;
-  flex-direction: row;
+  gap: 10px;
+  padding: 38px 19px 38px 19px;
+  transition: all 300ms ease-in-out;
 }
 
-.box-2 {
-  height: 110px;
-  width: 396px;
-  font-size: 14px;
-  background-color: var(--white-color);
-  display: flex;
-  justify-content: space-between;
-  border-radius: 20px;
+.box-1 svg {
+  width: 60px;
+  height: 60px;
+  transition: all 300ms ease-in-out;
 }
 
-.box-2-2 {
-  margin-right: 56.5px;
-  margin-left: 20px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  gap: 8px;
-}
-
-.box-3 {
-  height: 116px;
+.tasks-info {
   width: 116px;
-  font-size: 14px;
-  background-color: var(--white-color);
-  border-radius: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  font-size: 47px;
+  font-weight: 600;
+  transition: all 300ms ease-in-out;
 }
-
+.tasks-info span:last-child {
+  font-size: 20px;
+  font-weight: 400;
+  color: var(--mockup-color);
+  transition: all 300ms ease-in-out;
+  text-align: center;
+}
 .summary-icon {
   height: 40px;
   margin-right: 10px;
@@ -123,10 +117,18 @@
 
 .summary-change-content {
   font-size: 47px;
+  font-weight: 600;
   display: flex;
-  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  transition: all 300ms ease-in-out;
 }
-
+.summary-change-content span:last-child {
+  font-size: 20px;
+  font-weight: 400;
+  color: var(--mockup-color);
+  transition: all 300ms ease-in-out;
+}
 .separator2 {
   height: 68px;
   width: 2px;
@@ -134,11 +136,22 @@
   margin: 21px 0 21px 0;
 }
 
-.summary-change-content2 {
-  font-size: 16px;
+.summary-info {
+  color: var(--mockup-color);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: 20px;
   font-weight: 700;
+  gap: 8px;
+  transition: all 300ms ease-in-out;
 }
-
+.summary-info span:last-child {
+  font-size: 18px;
+  font-weight: 400;
+  transition: all 300ms ease-in-out;
+}
 .d-none {
   display: none;
 }
@@ -153,7 +166,6 @@
   }
   .summary-content {
     margin: 80px 0 80px 16px;
-    align-items: start;
     gap: 16px;
   }
 
@@ -175,6 +187,10 @@
   .summary-column {
     gap: 16px;
   }
+  .box-1 svg {
+    width: 69px;
+    height: 69px;
+  }
 }
 @media (min-width: 900px) {
   .separator-desktop {
@@ -191,5 +207,51 @@
   .summary-column {
     flex-direction: row;
     align-items: center;
+  }
+}
+
+@media (max-width: 466px) {
+  .summary-title h1 {
+    font-size: 43px;
+  }
+  .tasks-info,
+  .summary-change-content {
+    font-size: 36px;
+  }
+  .summary-title span,
+  .tasks-info span:last-child,
+  .summary-change-content span:last-child,
+  .summary-info {
+    font-size: 18px;
+  }
+  .separator-mobile {
+    width: 80px;
+    margin-top: 8px;
+  }
+  .box-1 svg {
+    width: 40px;
+    height: 40px;
+  }
+  .box-1 {
+    padding: 19px 8px 19px 8px;
+  }
+  .summary-info span:last-child {
+    font-size: 16px;
+  }
+  .summary-row {
+    gap: 10px;
+  }
+  .summary-content {
+    margin: 32px 0 32px 0;
+  }
+  .tasks-info {
+    width: 88px;
+  }
+  .summary-content {
+    height: calc(70vh);
+  }
+  .summary-info {
+    width: 120px;
+    padding: 19px 8px 19px 8px;
   }
 }
