--- a/assets/templates/header.html
+++ b/assets/templates/header.html
@@ -1,13 +1,18 @@
 <header class="header">
   <div class="header-gap">
     <img class="header-logo" src="/assets/img/logo.png" alt="join logo" />
-
-    <div id="header-initials-id" class="header-profil" onclick="togglelogoutContainer()"></div>
-    <div id="logout-id" class="logout-dropdown">
-        <a >Legal Notice</a>
-        <a >Privacy Policy</a>
-        <a href="./index.html">Log out</a>
+    <span class="header-info"> Kanban Project Management Tool</span>
+    <div class="header-menu-container" >
+      
+      <img class="header-logo" src="/assets/img/help.png" alt="join logo" />
+      <div id="header-initials-id" class="header-profil" onclick="togglelogoutContainer()"></div>
+      <div id="logout-id" class="logout-dropdown">
+          <a >Legal Notice</a>
+          <a >Privacy Policy</a>
+          <a href="./index.html">Log out</a>
+      </div>
     </div>
+    
     </div>
   </div>
 </header>
