--- a/css/header.css
+++ b/css/header.css
@@ -7,13 +7,37 @@
   background-color: var(--white-color);
   z-index: 990;
 }
+.header-menu-container {
+  display: flex;
+  align-items: center;
+  justify-content: end;
+  gap: 16px;
+}
+
+.header-menu-container img {
+  cursor: pointer;
+  height: 30px;
+  width: 30px;
+  transition: all 300ms ease-in-out;
+}
+
+.header-menu-container img:hover {
+  transform: scale(1.2);
+}
 
 .header-gap {
   display: flex;
+  position: relative;
   justify-content: space-between;
   align-items: center;
   flex-direction: row;
   padding: 20px 16px;
+}
+.header-info {
+  left: calc(232px + 110px);
+  position: absolute;
+  font-size: 22px;
+  transition: all 300ms ease-in-out;
 }
 
 .header-logo {
@@ -88,10 +112,26 @@
     border-radius: 10px;
     background: var(--hyper-link-color);
   }
+  .header-profil:hover {
+    background: rgba(12, 46, 98, 0.12);
+  }
 }
-@media (max-width: 761px) {
+@media (max-width: 860px) {
+  .header-info {
+    left: calc(232px + 16px);
+  }
+}
+
+@media (max-width: 760px) {
+  .header-info,
+  .header-menu-container img {
+    display: none;
+  }
   .logout-dropdown a:active {
     border-radius: 10px;
     background: var(--hyper-link-color);
+  }
+  .header-profil:active {
+    background: rgba(12, 46, 98, 0.12);
   }
 }
