--- a/css/legal_docs/legal.css
+++ b/css/legal_docs/legal.css
@@ -76,13 +76,13 @@
 }
 
 .legal-back-arrow {
-  position: absolute;
+  position: fixed;
   display: flex;
   justify-content: center;
   align-items: center;
   cursor: pointer;
-  top: 10px;
-  right: 16px;
+  top: 160px;
+  right: 37px;
   border-radius: 50%;
   padding: 4px;
   transition: all 300ms ease-in-out;
@@ -98,8 +98,31 @@
   .legal-back-arrow:active svg path {
     fill: white;
   }
+  .legal-notice-content {
+    margin: 96px 0px 0 232px;
+    padding: 32px 32px 32px 32px;
+    max-height: calc(100vh - 96px);
+  }
+  .legal-style {
+    justify-content: start;
+  }
+  .legal-back-arrow {
+    top: 148px;
+    right: 52px;
+  }
 }
-
+@media (min-width: 1000px) {
+  .legal-notice-content {
+    margin: 96px 0px 0 232px;
+    padding: 110px 96px 96px 96px;
+    max-height: calc(100vh - 96px);
+    max-width: 1920px;
+  }
+  .legal-back-arrow {
+    top: 222px;
+    right: 126px;
+  }
+}
 @media (max-width: 761px) {
   .legal-back-arrow:active {
     background: var(--placeholder-color);
@@ -127,6 +150,7 @@
     margin-bottom: 6px;
   }
   .legal-back-arrow {
-    right: -16px;
+    top: 150px;
+    right: 16px;
   }
 }
