--- a/assets/templates/header.html
+++ b/assets/templates/header.html
@@ -7,12 +7,13 @@
       <img class="header-logo" src="/assets/img/help.png" alt="join logo" />
       <div id="header-initials-id" class="header-profil" onclick="togglelogoutContainer()"></div>
       <div id="logout-id" class="logout-dropdown">
-          <a >Legal Notice</a>
-          <a >Privacy Policy</a>
+          <a href="/privacy_policy.html" >Privacy Policy</a>
+          <a href="/legal_notice.html">Legal Notice</a>
+          
           <a href="./index.html">Log out</a>
       </div>
     </div>
-    
+  
     </div>
   </div>
 </header>
