legal  navigation  vom index  html ready

--- a/assets/templates/footer.html
+++ b/assets/templates/footer.html
@@ -1,10 +1,10 @@
 <link rel="stylesheet" href="/css/footer.css">
-<footer class="footer">
+<footer  class="footer">
     <div class="footer-wrapper">
         <div class="desktop-logo">
             <img src="/assets/img/footer_logo.png" alt="Join Logo">
         </div>
-        <div class="menu-wrapper">
+        <div id="menu-navigation-id" class="menu-wrapper">
             <div class="menu-content" >
                 <div class="footer-icon-box">
                     <a href="/summary.html" class="footer-link">
