--- a/assets/templates/header.html
+++ b/assets/templates/header.html
@@ -2,7 +2,7 @@
   <div class="header-gap">
     <img class="header-logo" src="/assets/img/logo.png" alt="join logo" />
     <span class="header-info">Kanban Project Management Tool</span>
-    <div class="header-menu-container" >
+    <div id="header-menu-id" class="header-menu-container" >
       
       <img class="header-logo" src="/assets/img/help.png" alt="join logo" />
       <div id="header-initials-id" class="header-profil" onclick="togglelogoutContainer()"></div>
