--- a/css/header.css
+++ b/css/header.css
@@ -18,7 +18,7 @@
   cursor: pointer;
   height: 30px;
   width: 30px;
-  transition: all 300ms ease-in-out;
+  transition: width 300ms ease-in-out, height 300ms ease-in-out;
 }
 
 .header-menu-container img:hover {
@@ -37,7 +37,7 @@
   left: calc(232px + 110px);
   position: absolute;
   font-size: 22px;
-  transition: all 300ms ease-in-out;
+  transition: left 300ms ease-in-out;
 }
 
 .header-logo {
