help-section  ready

--- a/css/legal_docs/legal.css
+++ b/css/legal_docs/legal.css
@@ -1,32 +1,38 @@
 .legal-notice-content *,
-.policy-notice-content * {
+.policy-notice-content *,
+.help-content * {
   word-wrap: break-word;
   font-size: 20px;
   transition: all 300ms ease-in-out;
 }
-.policy-notice-content a {
+.policy-notice-content a,
+.help-content a {
   color: #29abe2;
 }
 .legal-notice-content p,
-.policy-notice-content p {
+.policy-notice-content p,
+.help-content p {
   text-wrap: wrap;
 }
 
 .legal-style span,
 .policy-style span,
 .legal-info a,
-.legal-indemnity a {
+.legal-indemnity a,
+.help-content span {
   color: #29abe2;
 }
 .legal-style,
-.policy-style {
+.policy-style,
+.help-style {
   font-size: 16px;
   display: flex;
   justify-content: center;
 }
 
 .legal-notice-content,
-.policy-notice-content {
+.policy-notice-content,
+.help-content {
   margin: 96px 0px 0 16px;
   padding-block: 48px;
   padding-right: 16px;
@@ -35,7 +41,8 @@
 }
 
 .legal-header h1,
-.privacy-policy h1 {
+.privacy-policy h1,
+.help-content h1 {
   font-size: 54px;
   font-weight: 700;
   margin-bottom: 32px;
@@ -49,18 +56,34 @@
 .privacy-scripts h2,
 .privacy-information h2,
 .privacy-questions h2,
-.privacy-protection h2 {
+.privacy-protection h2,
+.help-whatIs h2,
+.help-howtoUse h2,
+.help-enjoy h2 {
   font-size: 34px;
   font-weight: 700;
   margin-bottom: 16px;
   transition: all 300ms ease-in-out;
 }
+
 .privacy-information h2,
-.privacy-questions h2 {
+.privacy-questions h2,
+.help-howtoUse h2,
+.help-enjoy h2 {
+  margin-top: 24px;
+}
+
+.help-list,
+.help-remember p:last-child {
   margin-top: 16px;
 }
-.privacy-policy {
+
+.privacy-policy,
+.help-list ol li {
   margin-bottom: 16px;
+}
+.help-welcome {
+  margin-bottom: 24px;
 }
 
 .privacy-rights ul li,
@@ -69,6 +92,12 @@
   padding-left: 16px;
   list-style-position: outside;
 }
+.help-list ol {
+  margin-left: 8px;
+  padding-left: 16px;
+  list-style-position: outside;
+}
+
 .legal-imprint ul li {
   list-style-position: inside;
 }
@@ -92,7 +121,8 @@
 .privacy-basis,
 .privacy-processing,
 .privacy-objection,
-.privacy-individual {
+.privacy-individual,
+.help-list {
   margin-bottom: 24px;
 }
 
@@ -112,7 +142,8 @@
 .privacy-basis h3,
 .privacy-processing h3,
 .privacy-objection h3,
-.privacy-individual h3 {
+.privacy-individual h3,
+.help-list h3 {
   font-size: 22px;
   font-weight: 700;
   transition: all 300ms ease-in-out;
@@ -146,7 +177,8 @@
     fill: white;
   }
   .legal-notice-content,
-  .policy-notice-content {
+  .policy-notice-content,
+  .help-content {
     margin: 96px 0px 0 232px;
     padding: 32px 32px 32px 32px;
     max-height: calc(100vh - 96px);
@@ -162,7 +194,8 @@
 }
 @media (min-width: 1000px) {
   .legal-notice-content,
-  .policy-notice-content {
+  .policy-notice-content,
+  .help-content {
     margin: 96px 0px 0 232px;
     padding: 110px 96px 96px 96px;
     max-height: calc(100vh - 96px);
@@ -181,11 +214,13 @@
 
 @media (max-width: 466px) {
   .legal-notice-content *,
-  .policy-notice-content * {
+  .policy-notice-content *,
+  .help-content * {
     font-size: 14px;
   }
   .legal-header h1,
-  .privacy-policy h1 {
+  .privacy-policy h1,
+  .help-content h1 {
     font-size: 40px;
   }
   .legal-imprint h2,
@@ -195,7 +230,10 @@
   .privacy-scripts h2,
   .privacy-information h2,
   .privacy-questions h2,
-  .privacy-protection h2 {
+  .privacy-protection h2,
+  .help-whatIs h2,
+  .help-howtoUse h2,
+  .help-enjoy h2 {
     font-size: 20px;
   }
   .legal-info h3,
@@ -214,7 +252,8 @@
   .privacy-basis h3,
   .privacy-processing h3,
   .privacy-objection h3,
-  .privacy-individual h3 {
+  .privacy-individual h3,
+  .help-list h3 {
     font-size: 16px;
     margin-bottom: 6px;
   }
