--- a/css/register/register_style.css
+++ b/css/register/register_style.css
@@ -1,12 +1,31 @@
 .logo {
   position: absolute;
-  top: 80px;
-  left: 77px;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  z-index: 3000;
+  background: var(--mockup-color);
+  animation: animateLogoBg 3s forwards;
+  animation-delay: 300ms;
 }
+@keyframes animateLogoBg {
+  0% {
+  }
+  100% {
+    z-index: 0;
+    background: white;
+  }
+}
+
 .logo img {
-  width: 64px;
-  height: 78px;
-  transition: all 300ms ease-in-out;
+  position: absolute;
+  top: calc(50% - 100px);
+  left: calc(50% - 100px);
+  width: 200px;
+  height: 200px;
+  animation: animateLogo 3s forwards;
+  animation-delay: 300ms;
 }
 
 .container {
@@ -201,9 +220,19 @@
 }
 
 @media (min-width: 761px) {
-  .logo img {
-    width: 80px;
-    height: 102px;
+  @keyframes animateLogo {
+    0% {
+      top: calc(50% - 100px);
+      left: calc(50% - 100px);
+      width: 200px;
+      height: 200px;
+    }
+    100% {
+      top: 80px;
+      left: 77px;
+      width: 80px;
+      height: 102px;
+    }
   }
   .signup-container {
     position: absolute;
@@ -250,13 +279,39 @@
   }
 }
 
-@media (min-width: 1340px) {
-  .logo img {
-    width: 100px;
-    height: 122px;
+@media (min-width: 1200px) {
+  @keyframes animateLogo {
+    0% {
+      top: calc(50% - 100px);
+      left: calc(50% - 100px);
+      width: 200px;
+      height: 200px;
+    }
+    100% {
+      top: 80px;
+      left: 77px;
+      width: 100px;
+      height: 122px;
+    }
   }
 }
+
 @media (max-width: 761px) {
+  @keyframes animateLogo {
+    0% {
+      top: calc(50% - 100px);
+      left: calc(50% - 100px);
+      width: 200px;
+      height: 200px;
+    }
+    100% {
+      top: 80px;
+      left: 77px;
+      width: 64px;
+      height: 78px;
+    }
+  }
+
   .back-arrow-container:active {
     background: var(--placeholder-color);
   }
